--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
+      <h2>Followers</h2>
+      <div class="draw_engine"></div>
   </body>
 </html>
